[package]
name = "blocking-test"
version = "0.1.0"
authors = ["Julius de Bruijn <bruijn@prisma.io>"]
edition = "2018"

[dependencies]
tokio = "0.2.0-alpha.4"
tokio-executor = "0.2.0-alpha.4"
futures-preview = "0.3.0-alpha.18"
async-std = "0.99"
r2d2 = "0.8"
postgres = { version = "0.16.0-rc.2", features = ["with-serde_json-1", "with-chrono-0_4", "with-uuid-0_7"]}
r2d2_postgres = { version = "0.15.0-rc.1" }
tokio-postgres = { version = "0.4.0-rc.2" }
lazy_static = "1.3"
tide = { git = "https://github.com/rustasync/tide" }
serde_json = "1"
chrono = "0.4"
uuid = "0.7"
rust_decimal = { git = "https://github.com/pimeys/rust-decimal.git", features = ["postgres"] }
http = "0.1"
